--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,3 +43,4 @@ jobs:
           composer install --no-dev
           php artisan view:cache
           php artisan route:cache
+          sudo chown -R nginx:nginx /var/www
