--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,36 @@
-name: Deploy to AWS
+name: Test and Deploy
 on:
   push:
     branches: [ master ]
 
 jobs:
-  deploy:
+  laravel-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: SSH to AWS server
+    - uses: actions/checkout@v2
+    - name: Copy .env
+      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+    - name: Install Dependencies
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+    - name: Generate key
+      run: php artisan key:generate
+    - name: Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
+    - name: Create Database
+      run: |
+        mkdir -p database
+        touch database/database.sqlite
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
+      env:
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
+      run: vendor/bin/phpunit
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: Executing remote ssh commands
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
@@ -17,6 +40,7 @@ jobs:
         script: |
           cd /var/www/edionme.com
           git pull origin master
-          ls -lash
-
-  
+          composer install --no-dev
+          php artisan view:cache
+          php artisan route:cache
+          sudo chown -R nginx:nginx /var/www
