--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,43 +4,17 @@ on:
     branches: [ testing ]
 
 jobs:
-  laravel-tests:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
-
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: Executing remote ssh commands
-      uses: appleboy/ssh-action@master
+    - name: Checkout 🛎️
+      uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.PORT }}
-        script: |
-          cd /var/www/edionme.com
-          git pull origin master
-          composer install --no-dev
-          php artisan view:cache
-          php artisan route:cache
-          sudo chown -R nginx:nginx /var/www
+        persist-credentials: false
+    - name: Executing remote ssh commands
+      uses: actions/checkout@v2
+      with:
+        persist-credentials: false
+      - run: |
+        ls -lash
