--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         persist-credentials: false
+
+    - name: Testing if has data
       run: |
         ls -lash
