--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,31 +42,18 @@ jobs:
         source: "./*"
         target: "/var/www/edionme.com"
 
-    - name: Executing remote ssh commands
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.KEY }}
-        port: ${{ secrets.PORT }}
-        script: |
-          cp ~/edionme.com/.env /var/www/edionme.com/.env
-          cd /var/www/edionme.com
-          composer install --no-dev
-          php artisan view:cache
-          php artisan route:cache
-
     configure-laravel:
       runs-on: ubuntu-latest
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.KEY }}
-          port: ${{ secrets.PORT }}
-          script: |
-            cp ~/edionme.com/.env /var/www/edionme.com/.env
-            cd /var/www/edionme.com
-            composer install --no-dev
-            php artisan view:cache
-            php artisan route:cache
+        steps:
+          - uses: appleboy/ssh-action@master
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              key: ${{ secrets.KEY }}
+              port: ${{ secrets.PORT }}
+              script: |
+                cp ~/edionme.com/.env /var/www/edionme.com/.env
+                cd /var/www/edionme.com
+                composer install --no-dev
+                php artisan view:cache
+                php artisan route:cache
