--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Test and Deploy
+name: Test and deploy
 on:
   push:
     branches: [ master ]
 
 jobs:
-  laravel-tests:
+  run-phpunit-tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -25,21 +25,37 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
-
-  deploy:
-    name: Deploy
+      
+  copy-files:
     runs-on: ubuntu-latest
     steps:
-    - name: Executing remote ssh commands
-      uses: appleboy/ssh-action@master
+    - uses: actions/checkout@master
+
+    - name: copy files
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
-        script: |
-          cd /var/www/edionme.com
-          git pull origin master
-          composer install --no-dev
-          php artisan view:cache
-          php artisan route:cache
+        overwrite: true
+        source: "./*"
+        target: "/var/www/edionme.com"  
+
+  configure-laravel:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure laravel
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.KEY }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cp ~/edionme.com/.env /var/www/edionme.com/.env
+            cd /var/www/edionme.com
+            composer install --optimize-autoloader --no-dev
+            php artisan config:cache
+            php artisan view:cache
+            php artisan route:cache
