--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,3 +59,7 @@ jobs:
             php artisan config:cache
             php artisan view:cache
             php artisan route:cache
+
+            chmod 2775 /var/www/edionme.com
+            find /var/www/edionme.com -type d -exec chmod 2775 {} \;
+            find /var/www/edionme.com -type f -exec chmod 0664 {} \
