--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,3 +63,7 @@ jobs:
             php artisan config:cache
             php artisan view:cache
             php artisan route:cache
+
+            chmod 2775 /var/www/edionme.com
+            sudo find /var/www/edionme.com -type d -exec chmod 2775 {} \;
+            sudo find /var/www/edionme.com -type f -exec chmod 0664 {} \;
