--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,13 +56,8 @@ jobs:
             cp ~/edionme.com/.env /var/www/edionme.com/.env
             cd /var/www/edionme.com
             composer install --optimize-autoloader --no-dev
-            php artisan config:clear
-            php artisan view:clear
-            php artisan route:clear
 
-            php artisan config:cache
-            php artisan view:cache
-            php artisan route:cache
+            php artisan optimize
 
-            find /var/www/edionme.com -type f -exec chmod 0664 {} \;
-            find /var/www/edionme.com -type d -exec chmod 2775 {} \;
+            sudo find /var/www/edionme.com -type f -exec chmod 0664 {} \;
+            sudo find /var/www/edionme.com -type d -exec chmod 2775 {} \;
