--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,3 +58,6 @@ jobs:
             composer install --optimize-autoloader --no-dev
 
             php artisan optimize
+
+            sudo find /var/www/edionme.com -type f -exec chmod 0664 {} \;
+            sudo find /var/www/edionme.com -type d -exec chmod 2775 {} \;
