--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "themsaid/wink": "*@dev"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -60,5 +61,14 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./packages/wink",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
