fix mobile header layout

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.a70c2a6de14a54e6b568.hot-update.js": "/js/app.a70c2a6de14a54e6b568.hot-update.js",
-    "/js/app.bd5e02e0c8c25a53a430.hot-update.js": "/js/app.bd5e02e0c8c25a53a430.hot-update.js",
-    "/js/app.ffb4fac10f064e6f90dd.hot-update.js": "/js/app.ffb4fac10f064e6f90dd.hot-update.js",
-    "/js/app.163200d03ecd33fe1d5f.hot-update.js": "/js/app.163200d03ecd33fe1d5f.hot-update.js",
-    "/js/app.8d8e74de158d5526d631.hot-update.js": "/js/app.8d8e74de158d5526d631.hot-update.js",
-    "/js/app.b5b4af6f821307c12fcc.hot-update.js": "/js/app.b5b4af6f821307c12fcc.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
