--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/app.2dbfd9541e570dbb06e4.hot-update.js": "/js/app.2dbfd9541e570dbb06e4.hot-update.js"
 }
